--- a/Miumiu/.settings/org.eclipse.core.resources.prefs
+++ b/Miumiu/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/QLMon.jsp=UTF-8
+encoding//src/main/webapp/css/styles.css=UTF-8
+encoding//src/main/webapp/listGV.jsp=UTF-8
 encoding/<project>=UTF-8
