--- a/Miumiu/src/main/webapp/WEB-INF/web.xml
+++ b/Miumiu/src/main/webapp/WEB-INF/web.xml
@@ -28,4 +28,64 @@
     <servlet-name>AddGiangVien</servlet-name>
     <url-pattern>/AddGiangVien</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>QLMonSVL</display-name>
+    <servlet-name>QLMonSVL</servlet-name>
+    <servlet-class>Controller.QLMonSVL</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>QLMonSVL</servlet-name>
+    <url-pattern>/QLMonSVL</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PopupMon</display-name>
+    <servlet-name>PopupMon</servlet-name>
+    <servlet-class>Controller.PopupMon</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PopupMon</servlet-name>
+    <url-pattern>/PopupMon</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>RGSchedule</display-name>
+    <servlet-name>RGSchedule</servlet-name>
+    <servlet-class>Controller.RGSchedule</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RGSchedule</servlet-name>
+    <url-pattern>/RGSchedule</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UpdateMon</display-name>
+    <servlet-name>UpdateMon</servlet-name>
+    <servlet-class>Controller.UpdateMon</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UpdateMon</servlet-name>
+    <url-pattern>/UpdateMon</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UpdateTKB</display-name>
+    <servlet-name>UpdateTKB</servlet-name>
+    <servlet-class>Controller.UpdateTKB</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UpdateTKB</servlet-name>
+    <url-pattern>/UpdateTKB</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>DeleteMon</display-name>
+    <servlet-name>DeleteMon</servlet-name>
+    <servlet-class>Controller.DeleteMon</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeleteMon</servlet-name>
+    <url-pattern>/DeleteMon</url-pattern>
+  </servlet-mapping>
 </web-app>
